--- a/GW_Heterozygosity_Variance.qmd
+++ b/GW_Heterozygosity_Variance.qmd
@@ -4521,7 +4521,7 @@ plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
 
 ## Same for chr 17
 
-# Shows a pattern seen in chr 2 (and others) where ludlowi samples have some plumb haplotypes
+### Shows a pattern seen in chr 2 (and others) where ludlowi samples have some plumb haplotypes
 
 ```{julia}
 # choose scaffold
@@ -4647,7 +4647,241 @@ end
 display(f)
 ```
 
-### For chr 17, stopping with the PCA until I decide what to do with such a complex case. Interesting that ludlowi seems to have some plumb and some obs haplogroup heterozygotes.
+```{julia}
+
+clusterNames = ["vir",
+                "nit",
+                "lud",
+                "troch",
+                "obs",
+                "plumb"]
+
+clusterColors = ["blue",
+                "grey",
+                "green",
+                "yellow",
+                "orange",
+                "red"]
+
+vir = (PCAmodelAll.metadata.PC1 .< -6.5) .&
+            (0.5 .< PCAmodelAll.metadata.PC2 .< 4) .&
+            (0 .< PCAmodelAll.metadata.PC3) .&
+            indSelection_lowIndHetStan
+nit = (-6 .< PCAmodelAll.metadata.PC1 .< -4.5) .&
+        (0.5 .< PCAmodelAll.metadata.PC2 .< 1.5) .&
+            indSelection_lowIndHetStan
+lud = (PCAmodelAll.metadata.PC1 .< -6.5) .&
+            (0.5 .< PCAmodelAll.metadata.PC2 .< 4) .&
+            (PCAmodelAll.metadata.PC3 .< 0) .&
+            indSelection_lowIndHetStan
+troch = (2 .< PCAmodelAll.metadata.PC1 .< 4.5) .&
+            (PCAmodelAll.metadata.PC2 .< -4) .&
+            indSelection_lowIndHetStan
+obs = (1.5 .< PCAmodelAll.metadata.PC1 .< 5) .&
+            (-3.5 .< PCAmodelAll.metadata.PC2 .< 2.5) .&
+            indSelection_lowIndHetStan
+plumb = (3.5 .< PCAmodelAll.metadata.PC1) .& 
+            (3 .< PCAmodelAll.metadata.PC2) .&
+            indSelection_lowIndHetStan
+
+# check the individuals in each group
+PCAmodelAll.metadata.Fst_group[virLud]
+PCAmodelAll.metadata.Fst_group[nit]
+PCAmodelAll.metadata.Fst_group[lud]
+PCAmodelAll.metadata.Fst_group[troch]
+PCAmodelAll.metadata.Fst_group[obs]
+PCAmodelAll.metadata.Fst_group[plumb]
+
+clusterArray = [vir nit lud troch obs plumb]
+
+# show numbers in each group
+println("The numbers in each group are $(sum(clusterArray, dims=1)) and the sum of those is $(sum(sum(clusterArray, dims=1)))")
+
+# create vectors that indicate the groups and plot order for this analysis:
+clusterMembership = fill("none", nrow(PCAmodelAll.metadata))
+plotOrder = fill(-9, nrow(PCAmodelAll.metadata))
+for i in eachindex(clusterArray[1,:])
+    clusterMembership[clusterArray[:,i]] .= clusterNames[i]
+    plotOrder[clusterArray[:,i]] .= i
+end
+
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_highHetVarRegion, clusterMembership, clusterNames)
+println("Calculated population allele frequencies and sample sizes")
+
+# Calculate per-site pi (within-group nucleotide distance)
+
+sitePi = getSitePi(freqs, sampleSizes)
+
+# calculate pairwise Dxy per site, using data in "freqs" and groups in "groups"
+
+Dxy, pairwiseDxyClusterNames = getDxy(freqs, clusterNames)
+
+Fst, FstNumerator, FstDenominator, pairwiseFstClusterNames = getFst(freqs, sampleSizes, clusterNames; among=false)  # set among to FALSE if no among Fst wanted (some things won't work without it) 
+
+# Now get averages of pi and Dxy for whole region:
+
+regionPiTable = DataFrame(cluster = clusterNames, pi = getRegionPi(sitePi))
+#= 6×2 DataFrame
+ Row │ cluster  pi         
+     │ String   Float64    
+─────┼─────────────────────
+   1 │ vir      0.0103774
+   2 │ nit      0.0010142
+   3 │ lud      0.00873934
+   4 │ troch    0.00706002
+   5 │ obs      0.0162496
+   6 │ plumb    0.00402182 =#
+
+regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegionDxy(Dxy))
+#= 15×2 DataFrame
+ Row │ cluster_pair  Dxy       
+     │ String        Float64   
+─────┼─────────────────────────
+   1 │ vir_nit       0.0230516
+   2 │ vir_lud       0.0137261
+   3 │ vir_troch     0.0345623
+   4 │ vir_obs       0.0343802
+   5 │ vir_plumb     0.0369935
+   6 │ nit_lud       0.0200072
+   7 │ nit_troch     0.0339931
+   8 │ nit_obs       0.0337221
+   9 │ nit_plumb     0.036556
+  10 │ lud_troch     0.0314598
+  11 │ lud_obs       0.0312961
+  12 │ lud_plumb     0.0339024
+  13 │ troch_obs     0.0201926
+  14 │ troch_plumb   0.0240156
+  15 │ obs_plumb     0.0195389 =#
+
+# Make a genotype-by-individual plot using all variable loci in the region,
+missingFractionAllowed = 0.1
+# in metadata, replace `Fst_group` column with cluster info (needed for the function below):
+PCAmodelAll.metadata.original_Fst_groups = PCAmodelAll.metadata.Fst_group # store the Fst_groups in this
+PCAmodelAll.metadata.Fst_group = clusterMembership
+PCAmodelAll.metadata.original_plot_order = PCAmodelAll.metadata.plot_order # store the original plot_order in this
+PCAmodelAll.metadata.plot_order = plotOrder
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs = genos_highHetVarRegion[:, selectedSNPs]
+pos_selectedSNPs = pos_highHetVarRegion[selectedSNPs, :]
+Fst_selectedSNPs = Fst[:, selectedSNPs]
+freqs_selectedSNPs = freqs[:, selectedSNPs]
+
+# limit the number of individuals per group to plot
+numIndsToPlot = fill(15, length(clusterNames))
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, 
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorRightProvided = true)
+```
+
+### Now show a GBI plot like above, but with heterozygotes:
+
+```{julia}
+
+clusterNamesWithHets = ["vir",
+                        "nit",
+                        "lud",
+                        "vir_troch",
+                        "lud_troch",
+                        "troch",
+                        "lud_obs",
+                        "obs",
+                        "troch_plumb",
+                        "plumb",
+                        "vir_plumb"]
+
+clusterColorsWithHets = ["blue",
+                        "grey",
+                        "green",
+                        "green1",
+                        "green2",
+                        "yellow",
+                        "olive",
+                        "orange",
+                        "coral",
+                        "red",
+                        "purple"]
+
+vir_troch = (-5 .< PCAmodelAll.metadata.PC1 .< 0) .&
+                (-4 .< PCAmodelAll.metadata.PC2 .< -0.7) .&
+                (0.5 .< PCAmodelAll.metadata.PC3 .< 2)
+                 .!indSelection_lowIndHetStan
+lud_troch = (-5 .< PCAmodelAll.metadata.PC1 .< 0) .&
+                (-4 .< PCAmodelAll.metadata.PC2 .< -0.7) .&
+                (-2.5 .< PCAmodelAll.metadata.PC3 .< 0.5)
+                 .!indSelection_lowIndHetStan
+lud_obs = (-3 .< PCAmodelAll.metadata.PC1 .< -1) .&
+                (-0.5 .< PCAmodelAll.metadata.PC2 .< 0) .&
+                 .!indSelection_lowIndHetStan
+troch_plumb = (1.5 .< PCAmodelAll.metadata.PC1 .< 5.5) .&
+                (-3 .< PCAmodelAll.metadata.PC2 .< 2) .&
+                 .!indSelection_lowIndHetStan
+vir_plumb = (-2.5 .< PCAmodelAll.metadata.PC1 .< 1) .&
+                (2 .< PCAmodelAll.metadata.PC2 .< 5) .&
+                 .!indSelection_lowIndHetStan
+
+clusterArray = [vir nit lud vir_troch lud_troch troch lud_obs obs troch_plumb plumb vir_plumb]
+
+sum(clusterArray, dims=1)
+
+if sum(sum(clusterArray, dims=1)) == size(PCAmodelAll.metadata, 1)
+    println("Good news: Individuals included in a group matches total number of individuals")
+else 
+    println("Warning: Individuals included in a group ($(sum(sum(clusterArray, dims=1)))) do NOT match total number of individuals ($(size(PCAmodelAll.metadata, 1)))")
+end
+
+
+# check which individuals left out:
+
+sum(clusterArray, dims=2)
+
+PCAmodelAll.metadata.ind[vec(sum(clusterArray, dims=2) .== 0)]
+PCAmodelAll.metadata.PC1[vec(sum(clusterArray, dims=2) .== 0)]
+PCAmodelAll.metadata.PC2[vec(sum(clusterArray, dims=2) .== 0)]
+indSelection_lowIndHetStan[vec(sum(clusterArray, dims=2) .== 0)]
+
+# create vectors that indicate the groups and plot order for this analysis:
+clusterMembershipWithHets = fill("none", nrow(PCAmodelAll.metadata))
+plotOrderWithHets = fill(-9, nrow(PCAmodelAll.metadata))
+for i in eachindex(clusterArray[1,:])
+    clusterMembershipWithHets[clusterArray[:,i]] .= clusterNamesWithHets[i]
+    plotOrderWithHets[clusterArray[:,i]] .= i
+end
+
+# Add column to main metadata object containing the cluster membership for this highHet region:
+command = "ind_with_metadata_included." * chr * "_cluster = clusterMembershipWithHets"
+eval(Meta.parse(command)) # this executes the command constructed above
+
+# in metadata, replace `Fst_group` column with cluster info (needed for the function below):
+PCAmodelAll.metadata.Fst_group = clusterMembershipWithHets
+PCAmodelAll.metadata.plot_order = plotOrderWithHets
+
+# limit the number of individuals per group to plot
+numIndsToPlotWithHets = fill(100, length(clusterNamesWithHets))
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHets, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNamesWithHets, clusterColorsWithHets;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+```
+
+### Chr 17 above shows interesting pattern with plumb haplotype more widespread--found in ludlowi, and the obscuratus pattern complex with recombination
 
 
 ## Same for chr 19
@@ -5445,13 +5679,13 @@ plotHaploblockSummary(genosSummary, ind_with_metadata_included,
 # These will be used for all chromosome regions below.
 
 integerToColorCodes = Dict{Int, String}(
-    1 => "blue",
-    2 => "turquoise1",
-    3 => "grey",
-    4 => "green",
-    5 => "yellow",
-    6 => "orange",
-    7 => "red",
+    1 => "blue", # vir
+    2 => "turquoise1", # vir south
+    3 => "grey", # nit
+    4 => "green", # lud
+    5 => "yellow", # troch
+    6 => "orange", # lud
+    7 => "red", # plumb
 )
 
 # Set up a data structure to store the code to converting, for each haploblock region, 
@@ -5487,6 +5721,17 @@ regionHaplotypeCode_all = Dict{String, Dict{String, Tuple{Int, Int}}}(
                     "virLud_troch"=>(1,5),
                     "troch"=>(5,5),
                     "obs"=>(6,6),
+                    "plumb"=>(7,7),
+                    "vir_plumb"=>(1,7)),
+    "gw17" => Dict("vir"=>(1,1),
+                    "nit"=>(3,3),
+                    "lud"=>(4,4),
+                    "vir_troch"=>(1,5),
+                    "lud_troch"=>(4,5),
+                    "troch"=>(5,5),
+                    "lud_obs"=>(4,6),
+                    "obs"=>(6,6),
+                    "troch_plumb"=>(5,7),
                     "plumb"=>(7,7),
                     "vir_plumb"=>(1,7)),
     "gw18" => Dict("virLud"=>(1,1),
@@ -5533,7 +5778,7 @@ regionHaplotypeCode_all = Dict{String, Dict{String, Tuple{Int, Int}}}(
                     "plumb"=>(7,7))
 )
 
-haploblockRegions = ["gw1A", "gw3", "gw13", "gw15", "gw18", "gw19", "gw26", "gw28", "gwZ"]
+haploblockRegions = ["gw1A", "gw3", "gw13", "gw15", "gw17", "gw18", "gw19", "gw26", "gw28", "gwZ"]
 
 numHaploblockRegions = length(haploblockRegions)
 numInds = size(ind_with_metadata_included, 1)
